# silicon-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/builtin-agents/: .gitkeep
src-tauri/builtin-mcp/: catalog.json
src-tauri/builtin-skills/create-expert/: SKILL.md
src-tauri/builtin-skills/create-skill/: SKILL.md
src-tauri/builtin-skills/create-team/: SKILL.md
src-tauri/builtin-skills/docx/: SKILL.md
src-tauri/builtin-skills/find-skills/: SKILL.md
src-tauri/builtin-skills/install-skill-dependency/: SKILL.md
src-tauri/builtin-skills/pdf/: SKILL.md
src-tauri/builtin-skills/plugin-creator/: SKILL.md
src-tauri/builtin-skills/pptx/: SKILL.md
src-tauri/builtin-skills/xlsx/: SKILL.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-template.rgba
src-tauri/src/: app_facade.rs  app_state.rs  group.rs  lib.rs  main.rs  yaml_block.rs
src-tauri/src/agent/: evolution_runner.rs  mod.rs  model.rs  service.rs  soul_store.rs  store.rs
src-tauri/src/app_settings/: mod.rs
src-tauri/src/apple/: automation.rs  calendar.rs  eventkit.rs  mod.rs  notes.rs  osascript.rs  reminders.rs
src-tauri/src/aux_gen/: enhance.rs  mod.rs  shared.rs  suggestions.rs  title.rs
src-tauri/src/browser/: cdp.rs  mock.rs  mod.rs  policy.rs  shared.rs
src-tauri/src/call_log/: mod.rs  observer.rs  store.rs
src-tauri/src/commands/: agent.rs  app_control.rs  artifact.rs  artifact_preview.rs  browser.rs  call_log.rs  computer.rs  group.rs  knowledge.rs  market.rs  mcp.rs  memory.rs  mod.rs  organization.rs  permissions.rs  plugin.rs  project.rs  provider.rs  run.rs  runtime.rs  scheduler.rs  session.rs  skill.rs  team.rs  tools.rs  tray.rs  usage.rs
src-tauri/src/context/: compaction.rs  mod.rs  prompt.rs
src-tauri/src/desktop/: macos.rs  mock.rs  mod.rs  windows.rs
src-tauri/src/engine/: builder.rs  control_tools.rs  event.rs  mod.rs  run_registry.rs
src-tauri/src/expert/: builtin.rs  expert.rs  frontmatter.rs  mod.rs  model.rs  service.rs  store.rs  types.rs
src-tauri/src/hook/: mod.rs  runner.rs  service.rs
src-tauri/src/http/: client.rs  error.rs  mod.rs  stream.rs
src-tauri/src/knowledge/: chunk.rs  embed.rs  embed_gateway.rs  ingest.rs  mod.rs  retrieve.rs  store.rs  types.rs
src-tauri/src/market/: expert_market.rs  fetch.rs  mod.rs  plugin_market.rs  repo.rs  skill_market.rs  team_market.rs  wire.rs
src-tauri/src/mcp/: auth.rs  client.rs  json.rs  manager.rs  mod.rs  proxy.rs  store.rs  transport.rs  transport_http.rs  transport_sse.rs  transport_stdio.rs  types.rs
src-tauri/src/memory/: mod.rs  (+7 more)
src-tauri/tests/: agent_dispatch.rs  app_health.rs  ask_commands.rs  ask_format.rs  compact.rs  engine_ask.rs  engine_interrupt.rs  engine_orphan_tool_call.rs  engine_pending_reconstruct.rs  engine_permission.rs  engine_plan.rs  engine_plugin_hooks.rs  engine_project_role.rs  engine_react.rs  engine_single_turn.rs  engine_skills.rs  engine_thinking.rs  engine_todos.rs  engine_tool_call_preview.rs  engine_tool_failed.rs  engine_usage.rs  mcp_commands.rs  mcp_store.rs  memory.rs  memory_agent_scope.rs  memory_curation.rs  memory_episode.rs  memory_profile.rs  memory_project_scope.rs  memory_recall.rs  memory_store.rs  openai_compat_normalize.rs  permission_commands.rs  permission_grants.rs  plan_mode_enforce.rs  plugin_agent_index.rs  plugin_service.rs  project_child_runs.rs  project_draft_submit.rs  project_schema.rs  (+22 more)
(+519 files in other folders)
