[package]
name = "silicon-agent"
version = "0.1.0"
description = "Silicon Agent — open-source desktop agent client"
authors = ["Silicon Agent"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "silicon_agent"
path = "src/lib.rs"

[[bin]]
name = "silicon-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = "0.4"
cron = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.6.2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
include_dir = "0.7"
tauri-plugin-notification = "2.3.3"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
prost = "0.14.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power", "Win32_Foundation"] }
